feat: added env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,13 @@
-AUTH_SECRET="your auth secret" # Added by `npx auth`. Read more: https://cli.authjs.dev
-
-
-
-DATABASE_URL="your database url"
+AUTH_FACEBOOK_CLIENT_ID=
+AUTH_FACEBOOK_CLIENT_SECRET=
+AUTH_GITHUB_CLIENT_ID=
+AUTH_GOOGLE_CLIENT_ID=
+AUTH_GOOGLE_CLIENT_SECRET=
+AUTH_RESEND_API_KEY=
+AUTH_SECRET=
+AUTH_TRUST_HOST=
+DATABASE_URL=
+GITHUB_ACCESS_TOKEN=
+GITHUB_CLIENT_SECRET=
+NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
